image tag & image address change

--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -482,7 +482,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_2.png)
+<img src="src/2023-04-06/test_4_2.png">
+
     
 
 
@@ -562,7 +563,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_5.png)
+<img src="src/2023-04-06/test_4_5.png">
+
     
 
 
@@ -714,7 +716,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_8.png)
+<img src="src/2023-04-06/test_4_8.png">
+
     
 
 
@@ -776,7 +779,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_11.png)
+<img src="src/2023-04-06/test_4_11.png">
+
     
 
 
@@ -865,7 +869,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_14.png)
+<img src="src/2023-04-06/test_4_14.png">
+
     
 
 
@@ -945,7 +950,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_17.png)
+<img src="src/2023-04-06/test_4_17.png">
+
     
 
 
@@ -1025,7 +1031,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_20.png)
+<img src="src/2023-04-06/test_4_20.png">
+
     
 
 
@@ -1222,7 +1229,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_23.png)
+<img src="src/2023-04-06/test_4_23.png">
+
     
 
 
@@ -1473,7 +1481,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_26.png)
+<img src="src/2023-04-06/test_4_26.png">
+
     
 
 
@@ -1724,7 +1733,8 @@ category: da
 
 
     
-![png](src/2023-04-06/test_4_29.png)
+<img src="src/2023-04-06/test_4_29.png">
+
     
 
 
