--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -483,7 +483,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_2.png">
+<img src="./src/2023-04-06/test_4_2.png">
 
     
 
@@ -564,7 +564,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_5.png">
+<img src="./src/2023-04-06/test_4_5.png">
 
     
 
@@ -717,7 +717,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_8.png">
+<img src="./src/2023-04-06/test_4_8.png">
 
     
 
@@ -780,7 +780,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_11.png">
+<img src="./src/2023-04-06/test_4_11.png">
 
     
 
@@ -870,7 +870,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_14.png">
+<img src="./src/2023-04-06/test_4_14.png">
 
     
 
@@ -951,7 +951,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_17.png">
+<img src="./src/2023-04-06/test_4_17.png">
 
     
 
@@ -1032,7 +1032,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_20.png">
+<img src="./src/2023-04-06/test_4_20.png">
 
     
 
@@ -1230,7 +1230,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_23.png">
+<img src="./src/2023-04-06/test_4_23.png">
 
     
 
@@ -1482,7 +1482,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_26.png">
+<img src="./src/2023-04-06/test_4_26.png">
 
     
 
@@ -1734,7 +1734,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="src/2023-04-06/test_4_29.png">
+<img src="./src/2023-04-06/test_4_29.png">
 
     
 
