--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -1673,6 +1673,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
       <td>-15.53</td>
       <td>패</td>
     </tr>
+
     <tr>
       <th>17</th>
       <td>2017년 06월 20일 ~ 2017년 08월 21일</td>
@@ -1734,7 +1735,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 
     
-<img src="./src/2023-04-06/test_4_29.png">
+<img src="_posts/src/2023-04-06/test_4_29.png">
 
     
 
