--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -1733,7 +1733,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </div>
 
 
-
+![png](./src/2023-04-06/test_4_2.png)
     
 <img src="/_posts/src/2023-04-06/test_4_29.png">
 
