--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -70,32 +70,6 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 	1) 상장연도가 회사마다 다르기에 상장 전연도의 자료가 없을 수 있음
 
-<style>
-  .table {
-  table-layout:fixed;
-  width:100%;
-  text-align:center;
-}
-.table th { 
-  background:#ccc;
-}
-.table td, .table th {
-  padding:10px 20px;
-  border-top:1px solid #ccc;
-  word-break:break-all
-}
-.table--min {
-  min-width:700px;
-}
-
-@media screen and (max-width:768px) {
-  /*normal*/
-  .table-box {
-    overflow-x:auto;
-  }
-}
-</style>
-
 
 ## 2. 빠른 결론
 👎 제발 투자하지마 👎 ('패'할 확률 90.0%)
@@ -1617,3 +1591,57 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 ![png](/src/2023-04-06/test_4_29.png)
     
+
+
+<style>
+*====================*/
+/* reset.css */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/*====================*/
+section {max-width:960px; margin:30px auto; padding:30px;}
+table {
+  width: 100%;
+}
+th, td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+th {
+  background: #f4f4f4;
+}
+.demo03 th, .demo03 td {
+  width: 20%;
+  text-align: left;
+}
+
+@media only screen and (max-width: 768px) {
+  .demo03 {
+    margin: 0 -10px;
+  }
+  .demo03 tr {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .demo03 th {
+    display: block;
+    width: 100%;
+  }
+  .demo03 td {
+    display: list-item;
+    width: 90%;
+    margin-left: 10%;
+    border: none;
+  }
+}
+</style>
