--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -1592,7 +1592,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 ![png](/src/2023-04-06/test_4_29.png)
     
 
-
+<div>
 <style>
 *====================*/
 /* reset.css */
@@ -1624,24 +1624,25 @@ th {
   width: 20%;
   text-align: left;
 }
-
-@media only screen and (max-width: 768px) {
-  .demo03 {
-    margin: 0 -10px;
-  }
-  .demo03 tr {
-    display: block;
-    margin-bottom: 10px;
-  }
-  .demo03 th {
-    display: block;
-    width: 100%;
-  }
-  .demo03 td {
-    display: list-item;
-    width: 90%;
-    margin-left: 10%;
-    border: none;
-  }
 }
+  @media only screen and (max-width: 768px) {
+    .demo03 {
+      margin: 0 -10px;
+    }
+    .demo03 tr {
+      display: block;
+      margin-bottom: 10px;
+    }
+    .demo03 th {
+      display: block;
+      width: 100%;
+    }
+    .demo03 td {
+      display: list-item;
+      width: 90%;
+      margin-left: 10%;
+      border: none;
+    }
+  }
 </style>
+</div>
