table style change

--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -1620,24 +1620,24 @@ th, td {
 th {
   background: #f4f4f4;
 }
-.demo03 th, .demo03 td {
+.dataframe th, .dataframe td {
   width: 20%;
   text-align: left;
 }
 }
   @media only screen and (max-width: 768px) {
-    .demo03 {
+    .dataframe {
       margin: 0 -10px;
     }
-    .demo03 tr {
+    .dataframe tr {
       display: block;
       margin-bottom: 10px;
     }
-    .demo03 th {
+    .dataframe th {
       display: block;
       width: 100%;
     }
-    .demo03 td {
+    .dataframe td {
       display: list-item;
       width: 90%;
       margin-left: 10%;
