--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -235,11 +235,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
     [[ 종목 : 마니커(027740) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 90.9%)
     과거 22회차 기간 동안 최대 15.33%  || 최저 -36.24% || 평균 -15.05%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -455,21 +451,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_2.png)
+[![png](/src/2023-04-06/test_4_2.png)](/src/2023-04-06/test_4_2.png)
     
 
 <br><br>
     [[ 종목 : 마니커에프앤비(195500) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 75.0%)
     과거 4회차 기간 동안 최대 0.0%  || 최저 -23.58% || 평균 -11.04%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -522,22 +511,15 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
   </tbody>
 </table>
 </div>
-
-
-
-    
-![png](/src/2023-04-06/test_4_5.png)
+   
+[![png](/src/2023-04-06/test_4_5.png)](/src/2023-04-06/test_4_5.png)
     
 
 <br><br>
     [[ 종목 : 하림지주(136480) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 100.0%)
     과거 12회차 기간 동안 최대 -2.37%  || 최저 -16.59% || 평균 -8.65%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -663,21 +645,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_8.png)
+[![png](/src/2023-04-06/test_4_8.png)](/src/2023-04-06/test_4_8.png)
     
 
 <br><br>
     [[ 종목 : 교촌에프앤비(339770) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 50.0%)
     과거 2회차 기간 동안 최대 1.27%  || 최저 -8.0% || 평균 -3.36%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -713,21 +688,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_11.png)
+[![png](/src/2023-04-06/test_4_11.png)](/src/2023-04-06/test_4_11.png)
     
 
 <br><br>
     [[ 종목 : 체리부로(066360) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 80.0%)
     과거 5회차 기간 동안 최대 2.3%  || 최저 -26.04% || 평균 -9.39%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -790,21 +758,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_14.png)
+[![png](/src/2023-04-06/test_4_14.png)](/src/2023-04-06/test_4_14.png)
     
 
 <br><br>
     [[ 종목 : 푸드나무(290720) 각 회차별 수익 ]]
     😀 투자 추천 😀 ('승'할 확률 75.0%)
     과거 4회차 기간 동안 최대 44.82%  || 최저 -38.98% || 평균 3.23%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -858,21 +819,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_17.png)
+[![png](/src/2023-04-06/test_4_17.png)](/src/2023-04-06/test_4_17.png)
     
 
 <br><br>
     [[ 종목 : 윙입푸드(900340) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 100.0%)
     과거 4회차 기간 동안 최대 -9.03%  || 최저 -25.83% || 평균 -18.51%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -926,21 +880,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_20.png)
+[![png](/src/2023-04-06/test_4_20.png)](/src/2023-04-06/test_4_20.png)
     
 
 <br><br>
     [[ 종목 : 동우팜투테이블(088910) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 82.4%)
     과거 17회차 기간 동안 최대 25.99%  || 최저 -32.63% || 평균 -10.93%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -1111,21 +1058,14 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-
-
-    
-![png](/src/2023-04-06/test_4_23.png)
+[![png](/src/2023-04-06/test_4_23.png)]((/src/2023-04-06/test_4_23.png)
     
 
 <br><br>
     [[ 종목 : 이지홀딩스(035810) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 69.6%)
     과거 23회차 기간 동안 최대 25.18%  || 최저 -36.17% || 평균 -6.61%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -1349,22 +1289,15 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
   </tbody>
 </table>
 </div>
-
-
-
-    
-![png](/src/2023-04-06/test_4_26.png)
+   
+[![png](/src/2023-04-06/test_4_26.png)](/src/2023-04-06/test_4_26.png)
     
 
 <br><br>
     [[ 종목 : 팜스토리(027710) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 56.5%)
     과거 23회차 기간 동안 최대 29.88%  || 최저 -29.1% || 평균 -3.18%
-
-
-
 <div>
-
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -1589,58 +1522,4 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 </table>
 </div>
 
-![png](/src/2023-04-06/test_4_29.png)
-    
-
-<style>
-*====================*/
-/* reset.css */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-/*====================*/
-section {max-width:960px; margin:30px auto; padding:30px;}
-table {
-  width: 100%;
-}
-th, td {
-  padding: 10px;
-  border: 1px solid #ddd;
-}
-th {
-  background: #f4f4f4;
-}
-.dataframe th, .dataframe td {
-  width: 20%;
-  text-align: left;
-}
-}
-  @media only screen and (max-width: 768px) {
-    .dataframe {
-      margin: 0 -10px;
-    }
-    .dataframe tr {
-      display: block;
-      margin-bottom: 10px;
-    }
-    .dataframe th {
-      display: block;
-      width: 100%;
-    }
-    .dataframe td {
-      display: list-item;
-      width: 90%;
-      margin-left: 10%;
-      border: none;
-    }
-  }
-</style>
+[![png](/src/2023-04-06/test_4_29.png)](/src/2023-04-06/test_4_29.png)
