--- a/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주가 뜰까?.md
@@ -5,7 +5,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 ---
 
 
-## 1. 시작하며
+## <U>1. 시작하며</U>
 시즌 한정 종목 중 뭐니뭐니 해도 빠질 수 없는 복날의 치킨관련주!
 
 
@@ -71,7 +71,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 	1) 상장연도가 회사마다 다르기에 상장 전연도의 자료가 없을 수 있음
 
 
-## 2. 빠른 결론
+## <U>2. 빠른 결론</U>
 👎 제발 투자하지마 👎 ('패'할 확률 90.0%)
 
 <div>
@@ -229,9 +229,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 <br><br><br>
 
-## 3. 회사별 상세내용
-
-
+## <u>3. 회사별 상세내용</u>
     [[ 종목 : 마니커(027740) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 90.9%)
     과거 22회차 기간 동안 최대 15.33%  || 최저 -36.24% || 평균 -15.05%
