--- a/_posts/2023-04-06-복날에는 과연 치킨주(닭가공육계 관련주)가 뜰까?.md
+++ b/_posts/2023-04-06-복날에는 과연 치킨주(닭가공육계 관련주)가 뜰까?.md
@@ -229,7 +229,7 @@ title: 복날에는 과연 치킨주(닭가공/육계 관련주)가 뜰까?
 
 <br><br><br>
 
-## <u>3. 회사별 상세내용</u>
+## <u>3. 종목별 상세내용</u>
     [[ 종목 : 마니커(027740) 각 회차별 수익 ]]
     👎 제발 투자하지마 👎 ('패'할 확률 90.9%)
     과거 22회차 기간 동안 최대 15.33%  || 최저 -36.24% || 평균 -15.05%
