--- a/_posts/2023-03-04-(SA)5월5일, 어린이날에는 어른이도 어린이 관련주로 즐거울까?.md
+++ b/_posts/2023-03-04-(SA)5월5일, 어린이날에는 어른이도 어린이 관련주로 즐거울까?.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: sa
-title: [SA]5월5일, 어린이날에는 어른이도 어린이 캐릭터 관련주로 즐거울까?
+title: (SA)5월5일, 어린이날에는 어른이도 어린이 캐릭터 관련주로 즐거울까?
 ---
 
 
