--- a/_posts/2023-04-11-(VA)재화와 서비스를 구매하기 위한 가계의 지출.md
+++ b/_posts/2023-04-11-(VA)재화와 서비스를 구매하기 위한 가계의 지출.md
@@ -14,17 +14,28 @@ title: (VA)2008년 금융위기와 코로나 영향으로 우리집 생활패턴
 
   - 명칭요약
       1. 통계자료 출처 : [통계청 국가통계포털 KOSIS](https://kosis.kr/index/index.do)
+
       2. 기간 : 2007년 ~ 2022년
+
       3. 자료 제목 
           - 주거형태별 가구당 월평균 가계수지(2019~2022)
 
           - 가구당 월평균 가계지출(2017~2018)
 
           - 가구당 월평균 가계수지(2007~2016)
-      4. 세부항목  
-          - 가계지출이란 : 식품, 의류, 주거(임대료), 에너지, 교통, 내구재(특히 자동차), 의료비, 여가 및 기타 서비스 등 일상의 필요 충족을 위한 가구의 최종 소비지출 금액
 
-          - 소비지출이란 : 재화와 서비스를 구매하기 위한 가계의 지출
+      4. 세부항목  
+          - 가계수지 :
+            - 총수입과 총지출을 합하여 가계수지라 하는데 언제나 ‘총수입=총지출’의 관계가 성립됨
+            
+            - 총수입=소득+기타수입+전월이월금
+            총지출=소비지출+비소비지출+기타지출+월말현금잔고
+
+          - 가계지출이란 : 
+            - 실질적으로 자산이 감소되는 지출로서 이는 소비지출과 비소비지출로 구분됨
+
+          - 소비지출이란 : 
+            - 생계유지에 필요한 재화와 용역의 구입을 위한 지출로 9개의 대분류(주거비와 광열비를 주거·광열비로 조사)로 이루어짐
 
           - 식료품 · 비주류음료
           
@@ -50,7 +61,9 @@ title: (VA)2008년 금융위기와 코로나 영향으로 우리집 생활패턴
           
           - 기타상품 · 서비스
           
-          - 비소비지출 = 가계지출 - 소비지출
+          - 비소비지출 :
+            - 법적 또는 제도에 의한 의무적 지출로써 소득세, 재산세 등의 조세와 기여금, 국민연금 등의 공적연금, 건강보험료, 고용보험료 등이 포함됨
+
       5. 단위 : 원화(원) 
 
 
