--- a/_posts/2023-04-11-(VA)2008년 금융위기와 코로나 영향으로 우리집 생활패턴은 어떻게 달라졌을까? copy.md
+++ b/_posts/2023-04-11-(VA)2008년 금융위기와 코로나 영향으로 우리집 생활패턴은 어떻게 달라졌을까? copy.md
@@ -92,9 +92,9 @@ title: (VA)2008년 금융위기와 코로나 영향으로 우리집 생활패턴
 
 2022년으로 넘어가며 전반적으로 떨어져 있던 수요 항목들이 올라가고,
 
-"주류. 담배" 항목은 꾸준히 떨어지고 있다.
+"주류. 담배" 항목은 증감율이 떨어지는 모습을 보인다.
 
-신기한게 교육쪽 지출이 2010년 지출 고점을 찍고 점점 내려가고 있다.
+신기한게 교육쪽 지출의 증감율이 2010년 지출 고점을 찍고 점점 내려가고 있다.
 
 아마 건강과 여가생활을 즐기는 "보건", "오락. 문화" 쪽으로 가지 않았나 생각도 해보게 된다.
 
