--- a/_posts/2023-04-13-(VA)통계로 보는 24개 암(Cancer)5년 상대 생존율  시리즈-1.md
+++ b/_posts/2023-04-13-(VA)통계로 보는 24개 암(Cancer)5년 상대 생존율  시리즈-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: va
-title: (VA)2023-04-13-(VA)통계로 보는 24개 암(Cancer)5년 상대 생존율 시리즈-1
+title: (VA)통계로 보는 24개 암(Cancer)5년 상대 생존율-1
 ---
 
 
